--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -73,7 +73,7 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/health"]
+      test: ["CMD-SHELL", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -97,8 +97,6 @@ services:
       postgres:
         condition: service_healthy
       redis:
-        condition: service_healthy
-      stratum:
         condition: service_healthy
       grafana:
         condition: service_healthy
@@ -133,9 +131,6 @@ services:
       - prometheus-data:/prometheus
     networks:
       - loka-dev-network
-    depends_on:
-      stratum:
-        condition: service_healthy
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
       interval: 30s
